[package]
name = "rust-ws"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
futures = "0.3.31"
futures-util = "0.3.31"
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = "0.27.0"
tungstenite = "0.27.0"
